# drive_gazebo_plugins

./: CMakeLists.txt  README.md  package.xml
include/drive_gazebo_plugins/: sign_label_plugin.h
launch/: sign_label_plugin.launch
scripts/: draw_bounding_boxes.py  insert_label_plugin.py  stvo_to_gtsrb.json
src/: sign_label_plugin.cpp
worlds/: world.sdf
worlds/materials/scripts/: tile-107e46b3200ade7ee87b3f9b7ef3e1aa71184c5b86c82994a154bbf3eb85590f.material  tile-3b48ce6e66c67c9582805512018116bed6a401a48a1bb2f551f5b2269ca8619c.material  tile-44a31c5a39408ba7a0a0168b60c614ab25f96764beee5fcbbf468fa213d7123f.material  tile-45cad6537720a42850ef64fc9dc65d65fe61e7bf865c30654c70f2a21f3bfba2.material  tile-551fcae01cc3ca0d67a6daa96571137fa23f67380df731028b2061ec40dfe718.material  tile-60f709a47b582d77df00f1f580fb87ae23194d723596429090e146c45a4840e0.material  tile-82338a88261264d400572c88c43d14d50a0f1ffe7ad16f16181301134cd37bc7.material  tile-8903a9057085c5d81d401b3fc4e50c051533d8abdd659586bc632d43eef62694.material  tile-a320651ed52beae346dc68936f3975be5ae663904183c41b17b333d39a8430fa.material  tile-b08eac2883c4185000b59246b4e60f8a7ce7d1a2a316f90000e72f9c60d13523.material  tile-bbc4a5e89d57f9591e24c6eda878da4a9f78077972e0233fa79a0e1398b9998c.material  tile-bbeb9e29a58201bb216f9f06ec9e98c04571dbd797b75f98099ad1c36419dc39.material  tile-c29ff11f73c23110f48ffd4e953b2ead0ad8aa8279076ce7ae1e2da7adf69874.material  tile-dc5fc703197bd2caab4ff60d52e0c3c288062387a22f360ec5d45c97f0b49c39.material  tile-e50c8d7debb2d978a98c5c8291165ed3c9c6861525d82b61217c05dae9f58dad.material  tile-ef730d5ff62d65e88771daacf280f524283f276378ea21ef48ebbfa81f94582e.material  tile-f780bc1571086e9aca7181b404d5051761625ac339452fe6baa33fc625b22b04.material
